# gtools

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt  tasks.py
.github/workflows/: ci.yml
config/: linux.profile  windows.profile
include/: plugin_api.h
plugins/json_formatter/: CMakeLists.txt  plugin.cpp
plugins/xml_formatter/: plugin.cpp
src/app/: CMakeLists.txt  main.cpp
src/core/: plugin_loader.cpp  plugin_loader.h
